proper user info
