# back/server/api/user/user.go
@@ -20,26 +20,16 @@ func ApplyRoutes(g *echo.Group) {
 	}
 }
 
-type (
-	getInfoOut200 postgres.User
-)
-
 // Return information about user, or 404 if user not registered.
 // @Summary Return information about user, or 404 if user not registered.
 // @Produce json
-// @Success 200 {object} getInfoOut200
-// @Failure 400,401,404,500 {object} httputil.HTTPError
+// @Success 200 {object} postgres.User
+// @Failure 400,401,500 {object} httputil.HTTPError
 // @Router /user/info [get]
 func getInfo(c echo.Context) error {
 	email, err := keyauth.GetEmail(c)
 	if err != nil {
 		return echo.ErrInternalServerError
-	}
-
-	if exists, err := postgres.CheckUserExists(c, email); err != nil {
-		return echo.ErrInternalServerError
-	} else if exists == false {
-		return c.NoContent(http.StatusNotFound)
 	}
 
 	user, err := postgres.GetUserInfo(c, email)
@@ -49,19 +39,33 @@ func getInfo(c echo.Context) error {
 	return c.JSON(http.StatusOK, user)
 }
 
-type (
-	updateInfoIn     postgres.User
-	updateInfoOut200 postgres.User
-)
-
 // Updates information about user.
 // @Summary Updates information about user.
-// @Accept json,mpfd
-// @Param user_info body updateInfoIn true "all information about user"
-// @Success 200,201 {object} getInfoOut200
+// @Accept json
+// @Produce json
+// @Param user_info body postgres.User true "all information about user"
+// @Success 200 {object} postgres.User
 // @Failure 400,401,500 {object} httputil.HTTPError
 // @Router /user/info [post]
 func updateInfo(c echo.Context) error {
-	// TODO
-	return c.NoContent(http.StatusNotImplemented)
+	user := new(postgres.User)
+	err := c.Bind(user)
+	if err != nil {
+		return echo.ErrBadRequest
+	} else if user.Hashtags == nil {
+		user.Hashtags = []string{}
+	}
+
+	valid, err := postgres.CheckUserValid(c, user)
+	if err != nil {
+		return echo.ErrInternalServerError
+	} else if valid == false {
+		return echo.ErrBadRequest
+	}
+
+	err = postgres.UpdateUserInfo(c, user)
+	if err != nil {
+		return echo.ErrInternalServerError
+	}
+	return c.JSON(http.StatusOK, user)
 }
